<resources>
    <string name="app_name">Crossroad</string>
    <string name="new_user_register">新用户注册</string>
    <string name="input_phone">输入手机号码</string>
    <string name="send_code">发送验证码</string>
    <string name="input_code">输入验证码</string>
    <string name="login_psw">登录密码</string>
    <string name="input_psw">输入密码</string>
    <string name="input_psw_again">重新输入密码</string>
    <string name="base_info">基本信息</string>
    <string name="identity">身份</string>
    <string name="owner">业主</string>
    <string name="shopkeeper">店主</string>
    <string name="nick_name">昵称</string>
    <string name="input_nick_name">请输入昵称</string>
    <string name="sure_register">确认注册</string>
    <string name="back">返回</string>
    <string name="forget_password">忘记密码?</string>
    <string name="forget_psw">重置密码</string>
    <string name="input_new_psw">输入新登录密码</string>
    <string name="input_new_psw_again">确认新登录密码</string>
    <string name="message">消息</string>
    <string name="wallet">钱包</string>
    <string name="store">店铺</string>
    <string name="my_store">我的店铺</string>
    <string name="person_center">个人中心</string>
    <string name="loading">正在加载</string>
    <string name="local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="sdcard_not_exist_toast">暂无外部存储</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
    <string name="user_logout_dialog_title">下线提示</string>
    <string name="user_logout_dialog_message">您的账号已经在另一台设备上登录，您被迫下线</string>
    <string name="user_delete_hint_message">您的账号已被删除，您被迫下线</string>
    <string name="change_password_message">您的密码已被修改，请重新登录</string>
    <string name="confirm">确定</string>
    <string name="network_disconnected_hint">当前网络不可用, 请检查你的网络设置</string>
    <string name="actionbar_msg">聊天</string>
    <string name="cross_app_key">跨应用</string>
    <string name="actionbar_conversation">会话</string>
    <string name="actionbar_contact">通讯录</string>
    <string name="actionbar_me">我</string>
    <string name="search_friend_hit">邮箱/用户名/ID</string>
    <string name="search">搜索..\.</string>
    <string name="take_monent">稍等片刻</string>
    <string name="add">添加</string>
    <string name="add_friend">添加朋友</string>
    <string name="add_friend_without_confirm">添加好友(无好友模式)</string>
    <string name="fetch_user_info_failed">用户信息获取失败</string>
    <string name="create_group">创建群聊</string>
    <string name="creating_hint">创建中</string>
    <string name="create_user">我们正在建立您的个人档案</string>
    <string name="search_friend_title_bar">搜索好友</string>
    <string name="friend_request_hit">请你输入你的添加好友请求</string>
    <string name="friend_request_input_hit">我是</string>
    <string name="send_request">发送请求</string>
    <string name="jmui_copy">复制</string>
    <string name="jmui_forward_msg">转发</string>
    <string name="jmui_copy_toast">已复制</string>
    <string name="jmui_delete">删除</string>
    <string name="jmui_delete_conv">删除该聊天</string>
    <string name="jmui_create_file_failed">创建文件失败</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_send_voice_hint">松开 结束</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_rest_record_time_hint">还可以说%s秒</string>
    <string name="combine_title">(%s)</string>
    <string name="jmui_file_not_found_toast">文件丢失, 尝试重新获取</string>
    <string name="not_select_photo">你没有选择照片，请重新选择</string>
    <string name="picture_not_found">没有找到您想要的图片</string>
    <string name="jmui_loading">正在加载</string>
    <string name="load_failed_toast">加载失败</string>
    <string name="info_null">未填写</string>
    <string name="change_avatar">修改头像</string>
    <string name="operation">操作</string>
    <string name="origin_picture">原图</string>
    <string name="choose">选择</string>
    <string name="jmui_send">发送</string>
    <string name="send_message">发消息</string>
    <string name="sending_hint">正在发送</string>
    <string name="jmui_resend_message_hint">重发该消息？</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_cancel">取消</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="load_origin_image">查看原图</string>
    <string name="downloading_hint">正在下载</string>
    <string name="download_completed_toast">下载完成</string>
    <string name="choose_album_title">选择相册</string>
    <string name="friend_opt_change_name">修改备注</string>
    <string name="friend_opt_delete">删除好友</string>
    <string name="friend_opt_detail">详细资料</string>
    <string name="detail_info">个人资料</string>
    <string name="jmui_voice_length">10"</string>
    <string name="jmui_symbol_second">\"</string>
    <string name="jmui_time_too_short_toast">时间太短！</string>
    <string name="file_fetch_failed">文件获取失败</string>
    <string name="jmui_record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="jmui_illegal_state_toast">录音状态异常,请稍后重试</string>
    <string name="draft">[草稿]</string>
    <string name="jmui_picture">图片</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="send_location">发送地理位置</string>
    <string name="permission_should_allow">请允许使用位置权限，否则无法发送位置消息</string>
    <string name="send_location_error">位置截图失败或会话为空</string>
    <string name="jmui_video">视频</string>
    <string name="jmui_location">位置</string>
    <string name="jmui_business_card">名片</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="type_custom">[自定义消息]</string>
    <string name="hundreds_of_unread_msgs">..\.</string>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="second">秒</string>
    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="select_friend_title">选择朋友</string>
    <string name="selected_num">(%s)</string>
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="area">地区</string>
    <string name="sign">个性签名</string>
    <string name="commit">确认</string>
    <string name="jmui_confirm">确定</string>
    <string name="finish">完成</string>
    <string name="upload_avatar_title">请选择上传头像方式</string>
    <string name="setting">设置</string>
    <string name="login_out">退出登录</string>
    <string name="add_to_friend">加为好友</string>
    <string name="setting_username_hit">昵称</string>
    <string name="setting_username_big_hit">更改名字</string>
    <string name="reset_nickname_hint">好名字可以让你的朋友更加容易记住你。</string>
    <string name="note_name">备注名</string>
    <string name="description">描述</string>
    <string name="setting_location_hit">地区</string>
    <string name="input_location_title">输入地区</string>
    <string name="input_area_error">请输入您所在的地区</string>
    <string name="setting_location_big_hit">修改地区</string>
    <string name="setting_signature_hit">个信签名</string>
    <string name="input_signature_toast">请输入您的个性签名</string>
    <string name="edit_signature_title">编辑个性签名</string>
    <string name="edit_signature_count">30</string>
    <string name="edit_friend_info_count">200</string>
    <string name="save">保存</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="unknown">未知</string>
    <string name="change_password">修改密码</string>
    <string name="jmui_change_pwd_tip">修改密码前请输入原密码</string>
    <string name="jmui_input_password_error_toast">输入密码错误，请重新输入</string>
    <string name="change_password_title">设置密码</string>
    <string name="change_old_password_hit">原密码</string>
    <string name="password">密码</string>
    <string name="hint_reset_password">请设置登录密码</string>
    <string name="hint_confirm_password">请再次输入</string>
    <string name="confirm_password">确认密码</string>
    <string name="change_password_hit">填写密码</string>
    <string name="change_password_re_hit">再次填写密码</string>
    <string name="password_not_match_toast">两次输入的密码不一致</string>
    <string name="password_change_success_toast">修改成功，请牢记新密码</string>
    <string name="set_do_not_disturb" >消息免打扰</string>
    <string name="set_do_not_disturb_success_hint">成功加入免打扰</string>
    <string name="remove_from_no_disturb_list_hint">已移除免打扰</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="add_to_blacklist_success_hint">成功加入黑名单</string>
    <string name="remove_from_blacklist_hint">已从黑名单移除</string>
    <string name="new_msg_remind_hit">新消息提醒</string>
    <string name="receive_new_msg_notification_hit">接收新消息通知</string>
    <string name="receive_new_msg_vibration_hit">震动</string>
    <string name="receive_new_msg_voice_hit">声音</string>
    <string name="background_msg_remind_time">后台消息免打扰时段</string>
    <string name="no_disturb_global_hit">全局免打扰</string>
    <string name="set_no_disturb_global_succeed">全局免打扰设置成功</string>
    <string name="remove_no_disturb_global_succeed">已移除全局免打扰</string>
    <string name="all_day_remind_hit">全天提醒</string>
    <string name="close_all_day_remind">关闭全天提醒后，消息只在设定时间内提醒</string>
    <string name="disturb_description">开启后，在设定时间段内收到新消息将不会响铃或震动</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="jmui_logout_confirm">确定退出登录？</string>
    <string name="about">关于</string>
    <string name="demo_version_name">demo版本号:%s</string>
    <string name="sdk_version">\nsdk版本号:</string>
    <string name="about_date">\n10月26日</string>
    <string name="new_functions">\n增加通讯录功能，在设置中打开好友模式即可开启。
        \n（无好友与好友模式的区别在于添加好友的时候是否需要验证，无好友模式添加完后可以直接进行会话）
        \n 增加发送位置功能</string>
    <string name="change_user_btn">切换账号</string>
    <string name="register">注册</string>
    <string name="registering_hint">注册中</string>
    <string name="register_failed_toast">注册失败</string>
    <string name="login">登录</string>
    <string name="login_hint">登录中</string>
    <string name="user_not_exist_toast">该用户不存在</string>
    <string name="jmui_user_already_exist_toast">该用户已存在</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="register_username_hit">用户名(数字、字母、_ 组成)</string>
    <string name="username_not_null_toast">用户名不能为空</string>
    <string name="nickname_not_null_toast">昵称不能为空</string>
    <string name="password_not_null_toast">密码不能为空</string>
    <string name="password_length_illegal">密码长度要在4\-128个字节之间</string>
    <string name="password_same_to_previous">不能和原密码相同，请输入新密码</string>
    <string name="jmui_server_800002">AppKey信息为空</string>
    <string name="jmui_server_800003">AppKey未注册</string>
    <string name="jmui_server_800004">用户ID为空</string>
    <string name="jmui_server_800005">用户ID未注册(AppKey无该UID)</string>
    <string name="jmui_server_800006">用户ID不存在(数据库中无该UID)</string>
    <string name="jmui_server_800012">请重新登录</string>
    <string name="jmui_server_800013">您的账号已登出，请重新登录</string>
</resources>