<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:orientation="horizontal"
        style="@style/white_toolbar_style">
        <LinearLayout
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/back_purple"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:layout_gravity="center_vertical|left"
                android:text="@string/back"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"
                style="@style/normal_text_style"/>
        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@mipmap/logo"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/topPanel"
        android:id="@+id/phone"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/phone"
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/input_psw"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"

        >
        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_below="@+id/password"
        android:id="@+id/login"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>